# relativistic-scalar-dynamics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  EJECUCION_COMPLETADA.md  EXECUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INSTALL.md  INSTALLATION_REPORT.txt  PROJECT_REVIEW.md  README.md  RESUMEN_FINAL.txt  REVIEW_SUMMARY.md  config_example.json  demo.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_environment.sh
benchmarks/: benchmark_fastpath.py  benchmark_mass_lumping.py  benchmark_solver.py
envs/: rsd-dolfinx-lock-osx-arm64.txt  rsd-dolfinx.yml
paper/: ACKNOWLEDGMENTS_VARIANTS.md  README.md  SOURCE_MANIFEST.sha256  main.tex  numbers.tex  refs.bib
psyop/: config.py
scripts/: cavity_l2_probe.py  convergence_study.py  dissipation_study.py  exterior_spectroscopy.py  install_environment.bat  install_environment.sh  interior_ab_smoke.py  interior_production.py  interior_window_calibration.py  o1_profile_calibration.py  oracle_energy_split.py  oracle_sensitivity_scan.py  paper_figures.py  paper_manifest.py  paper_numbers.py  paper_protocol_addenda.py  paper_tex_numbers.py  pilot_phase0_oracle.py  price_tail_diagnostic.py  qnm_kerr_sweep.py  record_live_demo.py  render_readme_showcase.py  run_simulation.py  setup_conda_env.sh  show_results.py
tests/: test_cavity_mode_slow.py  test_cli_smoke.py  test_config_and_qnm.py  test_convergence_slow.py  test_cowling.py  test_energy_conservation.py  test_excision_window.py  test_extraction.py  test_filter_stability_guard.py  test_initial_data_ylm.py  (+37 more)
(+144 files in other folders)
