[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyop"
version = "2.1.0"
description = "Scalar field evolution in black hole backgrounds using DOLFINx"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "mpi4py>=3.1",
  "petsc4py>=3.19",
  "gmsh>=4.11",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
analysis = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.6.0"]
docs = ["sphinx>=5.0", "sphinx-rtd-theme>=1.0"]

[project.scripts]
psyop = "psyop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["psyop*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
